# trasf_wiki

./: .gitignore  Analisi.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  MANUALE_UTENTE.md  QUICK_START.md  README.md  README_ESEGUIBILE.md  README_SVILUPPATORE.md  build.bat  build.ps1  build_exe.spec  launcher_gui.py  programma.md  setup.bat  setup.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  dto.py
backend/app/routers/: convert.py  files.py  health.py
backend/app/services/: convert_wikitext.py  extract_docx.py  extract_odt.py  extract_pdf.py  extract_rtf.py  storage.py
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
frontend/src/app/components/gallery/: gallery.component.css  gallery.component.html  gallery.component.ts
frontend/src/app/components/result/: result.component.css  result.component.html  result.component.ts
frontend/src/app/components/upload/: upload.component.css  upload.component.html  upload.component.ts
frontend/src/app/components/wikitext-preview/: wikitext-preview.component.css  wikitext-preview.component.html  wikitext-preview.component.ts
frontend/src/app/services/: api.service.ts  wikitext-parser.service.ts
