[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
